# hexitec-mhz-detector

./: .gitignore  README.md
.github/workflows/: tagged_release_app.yml
control/: pyproject.toml
control/src/hexitec/: adapter.py  controller.py
control/src/hexitec/acquisition/: adapter.py  controller.py
control/src/hexitec/acquisition/processes/: configuration.py  state.py
control/src/hexitec/admonitor/: adxdma_flags.py  adxdma_state.py
control/src/hexitec/liveview/: adapter.py  controller.py  processor.py
control/src/hexitec/mhz_monitor/: gen_state_graph.py  mhz_fm_state_machine.py  state_machine.py
control/src/hexitec/util/: iac.py
control/web/config/: odin.cfg  odin_data_configs.json  statemachine.cfg
control/web/config/adxdma/: hexitec_mhz_dual_hist_nosi5328.json  hexitec_mhz_dual_hist_nosi5328.xml
control/web/config/register_accessor/: alpha_data_with_trigger.json  hexitec_mhz_dual_hist_generated_immediate.json  hexitec_mhz_dual_hist_generated_polled.json  hexitec_mhz_dual_hist_nosi5328.json  register_access_policy.json
control/web/config/sequences/: test_sequences.py
control/web/static/hexitec-react/: .env.development  index.html  package-lock.json  package.json
control/web/static/hexitec-react/src/: App.tsx  EndpointTypes.tsx  main.tsx  sequencer.d.ts  tooltips.tsx  utils.js  utils.ts
control/web/static/hexitec-react/src/components/: FilePicker.tsx  MinMaxInput.tsx  UserAware.tsx  UserLevel.tsx
control/web/static/hexitec-react/src/components/admonitor/: ADMonitor.tsx  DiagInfo.tsx  MonitorOverlay.tsx  StatusOverview.tsx  style.module.css
control/web/static/hexitec-react/src/components/configuration/: DetectorControls.tsx  Environmental.tsx  FileUploads.tsx  Processing.tsx
control/web/static/hexitec-react/src/components/liveview/: ClickableImage.jsx  ClickableImage.tsx  ColourScale.tsx  HistogramLiveView.jsx  HistogramLiveView.tsx  HistogramPlot.jsx  HistogramPlot.tsx  RegionSelection.tsx  ValueRangeControl.jsx  ValueRangeControl.tsx  colorUtils.js  colorUtils.ts
control/web/static/hexitec-react/src/pages/: Acquisition.tsx  AsicControl.tsx  CameraControl.tsx  Configuration.tsx  Histogrammer.tsx  LiveView.tsx  Processing.tsx  RegisterMap.tsx  Sequencer.tsx
control/web/static/hexitec-react/src/pages/hidden/: AsicControl.tsx  Histogrammer.tsx  RegisterMap.tsx
data/cpp/: CMakeLists.txt
data/cpp/config/: HexitecMhz_single_Hist_1024.json  fp_log4cxx.xml
data/cpp/include/: CMakeLists.txt  HexitecMhzPlugin.h  HexitecMhzUniversalDecoder.h  version.h.in
data/cpp/src/: CMakeLists.txt  HexitecMhzPlugin.cpp
