[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Hexitec-MHz-Top-Level-Control"
description = "odin-control based system for managing aqusitions and DAQ system state for the Hexitec-MHz Detector system"
dynamic = ["version"]
requires-python = ">=3.10.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "munir @ git+https://github.com/stfc-aeg/munir.git#egg=munir",
    "requests",
    "python-statemachine=2.6.0",
    # "RegisterAccessor @ git+ssh://git@github.com/stfc-aeg/memory-accessor.git#subdirectory=control",
    "mhz-readout @ git+ssh://git@github.com/stfc-aeg/MHz-Readout-Processor",
    # "histogrammer @ git+ssh://git@github.com/stfc-aeg/odin-histogrammer.git@v1.0.1",
    "opencv-python",
    "matplotlib",
    "blosc"

]
readme = "README.md"
authors = [
    {name = "Josh Harris"},
    {name = "Mika Shearwood", email = "mika.shearwood@stfc.ac.uk"},
    {name = "Ashley Neaves", email = "ashley.neaves@stfc.ac.uk"}
]

[project.optional-dependencies]
odin_control = [
    "odin-control @ git+https://github.com/odin-detector/odin-control@1.6.0#egg=odin-control"
]

[project.urls]
GitHub = "https://github.com/stfc-aeg/hexitec-mhz-detector"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Optional settings for setuptools_scm
root = ".."
write_to = "control/src/hexitec/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

